--- a/explicacao.html
+++ b/explicacao.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Explicação</h1>
+    <button class="voltar" onclick="voltar()">voltar</button>
+    <script src="explicacao.js"></script>
 </body>
 </html>
